syntax = "proto3";

package pb;

import "span.proto";

// TraceChunk represents a list of spans with the same trace id.
message TraceChunk {
	// priority specifies sampling priority of the trace.
	int32 priority = 1;
	// origin specifies origin product ("lambda", "rum", etc.) of the trace.
	string origin = 2;
	// spans specifies list of containing spans.
	repeated Span spans = 3;
	// tags specifies tags common in all `spans`.
	map<string, string> tags = 4;
	// droppedTrace specifies whether the trace was dropped by samplers or not.
	bool droppedTrace = 5;
}

// TracerPayload represents a payload the trace agent receives from tracers.
message TracerPayload {
	// containerID specifies the ID of the container where the tracer is running on.
	string containerID = 1;
	// languageName specifies language of the tracer.
	string languageName = 2;
	// languageVersion specifies language version of the tracer.
	string languageVersion = 3;
	// tracerVersion specifies version of the tracer.
	string tracerVersion = 4;
	// runtimeID specifies V4 UUID representation of a tracer session.
	string runtimeID = 5;
	// chunks specifies list of containing trace chunks.
	repeated TraceChunk chunks = 6;
	// tags specifies tags common in all `chunks`.
	map<string, string> tags = 7;
	// env specifies `env` tag that set with the tracer.
	string env = 8;
	// hostname specifies hostname of where the tracer is running.
	string hostname = 9;
	// version specifies `version` tag that set with the tracer.
	string appVersion = 10;
}
